Fix: Add options in Adder UI, remove horizontal scrolls

--- a/src/sass/openeyes/ui/_buttons.scss
+++ b/src/sass/openeyes/ui/_buttons.scss
@@ -39,14 +39,17 @@
 	//	height: 32px;    // tab is 38px
 	//}
 	
-	// add primarily for + buttons
-	// in 9 positions as I need a more "square" button
+	// For: Analytics filters
+	// & 9 positions in Strab	
 	&.thin {
 		padding: 0 3px;
 	}
 	
 	// class to replace the required <i> DOM for standard + buttons
 	&.adder {
+		&.square {
+			width: 25px;
+		}
 		width: 35px;
 		padding: 0;
 		background: $oe-btn-green-hint;
@@ -57,8 +60,8 @@
 			height:19px;
 			width:19px;
 			margin: auto;
-			position:relative; // because the height is 24px, should be 25px to get the icon in the middle! darn it.
-			top: 0.5px;
+			position:relative; 
+			top: 0.5px; // because the height is 24px, should be 25px to get the icon in the middle! darn it.
 			background: transparent url( svg-path('icons/plus')) top left no-repeat;
 			background-size: 19px;
 			opacity: $oe-icon-opacity; // 0.6 is standard
