--- a/src/sass/openeyes/ui/add-select-search/_add-options.scss
+++ b/src/sass/openeyes/ui/add-select-search/_add-options.scss
@@ -12,6 +12,7 @@
 	.add-options{
 		height:$oe-add-insert-popup-height + 20;		// fix height (based on 0-9, shows all options without scroll!)  
 		overflow-y: auto;
+		overflow-x: hidden;
 		margin:0 2px 0 0;
 		max-width: 400px; 		// Meds can be really long
 		
